--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug:windows": "set DEBUG=express:* & node ./bin/www",
+    "debug:linux": "DEBUG=express:* node ./bin/www",
+    "debug:nodemon:windows": "set DEBUG=express:* & nodemon ./bin/www",
+    "debug:nodemon:linux": "DEBUG=express:* nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
+    "ejs-locals": "^1.0.2",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.1"
   }
 }
