--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:nodemon": "nodemon ./bin/www",
     "debug:windows": "set DEBUG=express:* & node ./bin/www",
     "debug:linux": "DEBUG=express:* node ./bin/www",
     "debug:nodemon:windows": "set DEBUG=express:* & nodemon ./bin/www",
