--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "ejs-locals": "^1.0.2",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.4.2",
-    "socket.io": "^2.0.1"
+    "node-sass-middleware": "0.9.8"
   }
 }
