--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "~2.5.6",
     "ejs-locals": "^1.0.2",
     "express": "~4.15.2",
+    "mongojs": "^2.4.0",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8"
   }
